src/styles/_responsive.scss
$tablet-land: 1023px;
$tablet-port: 767px;
$mobile-land: 579px;
$mobile-port: 321px;


@media only screen and (max-width : $tablet-land ) {

    .wrapper {
        width: 100%;
        padding: 0 60px;
    }

    section.hero {
        height: 550px;
        overflow: hidden;

        .hero-img-contain {
            position: absolute;
            height: 550px;
            z-index: 0;
            overflow: hidden;
            width: 100%;

            img {
                position: relative;
                height: 650px;
                width: auto;
                min-width: 100%;
            }
        }

        .wrapper {
            .hero-content {
                p {
                    margin: 0 0 50px;
                    width: 250px;
                }

                a.signup-btn { display: inline-block; }
                a.demo-btn { display: none; }
            }

            img {
                position: relative;
                top: 60px;
                left: 55%;
            }
        }
    }

    .view-header {
        nav {
            left: 0;
            margin: 0;
            padding: 0 60px;
            width: 100%;

            ul.main {
                left: 180px;
                margin: 0;

                li { margin: 0 10px; }
            }

            ul.account { right: 60px; }
        }
    }

    .view-home {
        section {
            &.hero.home {
                height: 700px;

                .hero-img-contain {
                    position: absolute;
                    height: 700px;
                    z-index: 0;
                    overflow: hidden;
                    width: 100%;

                    img {
                        position: relative;
                        height: 700px;
                        width: auto;
                    }
                }
            }

            &.hero {
                height: 550px;
                overflow: hidden;

                .wrapper {
                    .hero-content {

                        p {
                            margin: 0 0 50px;
                            width: 250px;
                        }

                        a.signup-btn { display: inline-block; }
                        a.demo-btn { display: none; }
                    }

                    img {
                        position: relative;
                        top: 60px;
                        left: 55%;
                    }
                }
            }

            &.hero .wrapper .hero-content p { max-width: 300px; }

            &.key .wrapper .key-content {
                width: 30%;
                margin: 70px 2.5%;
            }

            &.feature {
                .wrapper {
                    .hero-content { margin: 65px 0 95px; }

                    .filters, .paper {
                        right: 0;
                        left: 450px;
                        max-height: 350px;
                        width: auto;
                    }

                    .how-it-works {
                        top: 170px;
                        width: 40%;
                        right: 52px;
                    }
                }
            }

            &.feature.how {
                .wrapper {
                    .hero-content {
                        li:last-child { margin: 20px 30px 0 0; }
                    }
                }
            }

            &.testimonials .wrapper {
                ul.bragging-rights { width: 80%; }

                ul.people {
                    li {
                        margin: 20px;
                        text-align: left;

                        img {
                            width: 50px;
                            display: inline-block;
                            margin: 0 15px 0 0;
                            vertical-align: top;
                        }

                        div {
                            display: inline-block;
                            vertical-align: top;
                            width: 170px;
                        }
                    }
                }
            }

            &.gym-badges .wrapper {
                ul {
                    font-size: 0;

                    li {
                        width: 25%;
                        margin: 0;

                        img { width: 100%; }
                    }
                }
            }
        }
    }

    .view-about {
        section {
            &.the-team {
                .wrapper {
                    padding: 70px 30px;
                }
            }
        }
    }

    .view-features {
        section {
            &.features {
                padding: 50px 0;

                .wrapper section {
                    .shrink-wrap {
                        width: 100%;

                        ul li.line { width: 420px; }

                    }

                    &.revenue, &.customers, &.items {
                        .shrink-wrap { background-size: 40%; }
                    }

                    &.merchandising .shrink-wrap {
                        background: url(../images/merchandising.svg) no-repeat 0 70%;
                        background-size: 40%;
                    }

                    &.custom {
                        .shrink-wrap { background-size: 20%; }
                    }

                }
            }

        }
    }
}
/* ... */

